Update: fix overflow issue in jgrowl and add newlines for cleaner combining

--- a/sites/all/modules/nicemessages/css/nicemessages-combined.css
+++ b/sites/all/modules/nicemessages/css/nicemessages-combined.css
@@ -1,3 +1,4 @@
+
 .jGrowl {
   z-index: 999999;
   color: #ffffff;
@@ -112,11 +113,14 @@
 .jGrowl.bottom-right {
     bottom: 40px;
     right: 0;
-}#jGrowl .jGrowl-notification {
+}
+
+#jGrowl .jGrowl-notification {
     background-position: 4px center;
     background-repeat: no-repeat;
     padding-left: 34px;
     padding-right: 14px;
+    overflow-y: auto;
 }
 #jGrowl .jGrowl-notification { color: #f0f0f0; background-color: #000000;}
 
