--- a/sites/all/modules/nicemessages/css/nicemessages_drupal.css
+++ b/sites/all/modules/nicemessages/css/nicemessages_drupal.css
@@ -1,8 +1,10 @@
+
 #jGrowl .jGrowl-notification {
     background-position: 4px center;
     background-repeat: no-repeat;
     padding-left: 34px;
     padding-right: 14px;
+    overflow-y: auto;
 }
 #jGrowl .jGrowl-notification { color: #f0f0f0; background-color: #000000;}
 
